--- a/front-end/package.json
+++ b/front-end/package.json
@@ -13,6 +13,8 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
+    "axios": "^0.21.1",
+    "dotenv": "^8.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
@@ -24,8 +26,7 @@
     "build": "react-scripts build",
     "eject": "react-scripts eject",
     "start": "react-scripts start",
-    "test": "npx cross-env CI=true npm run test:run",
-    "test:run": "run-s test:unit test:e2e",
+    "test": "npx cross-env CI=true run-s test:unit test:e2e",
     "test:1": "run-p -l -r test:start:* \"test:e2e:run -- us-01\"",
     "test:2": "run-p -l -r test:start:* \"test:e2e:run -- us-02\"",
     "test:3": "run-p -l -r test:start:* \"test:e2e:run -- us-03\"",
